--- a/index.html
+++ b/index.html
@@ -12,15 +12,41 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-md-6">
                 <header class="flex">
                     <h1 id="peterw">Ali Al Qaraghuli</h1>
-                    <ul>
+                    <!-- <ul>
                         <li> <a id="index" href="index.html">About |</a> </li>
                         <li> <a id="portfolio" href="portfolio.html"> Portfolio |</a> </li>
                         <li> <a id="contact" href="contact.html"> Contact</a> </li>
+                    </ul> -->
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="index.html">About |</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html"> Portfolio |</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html"> Contact</a>
+                        </li>
                     </ul>
+                    </nav>
                 </header>
+
+                <nav>
+                    <!-- <ul class="nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="index.html">About |</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html"> Portfolio |</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html"> Contact</a>
+                        </li>
+                    </ul>
+                </nav> -->
             </div>
         </div>
 
