create responsive web

--- a/index.html
+++ b/index.html
@@ -3,100 +3,52 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>ALI Portfolio</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="assets/css/style.css" type="text/css"> -->
+    <title>Peter's Portfolio</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
-            <h3>ALI ALQARAGHULI</h3>
-        </a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
+    <header class="masthead">
+        <div class=container>
+            <a href="index.html" id="peterw">ALI</a>
+            <nav>
+                <a id="about" href="index.html"> About </a>
+                <a id="portfolio" href="portfolio.html"> Portfolio </a>
+                <a id="contact" href="contact.html"> Contact </a>
+            </nav>
         </div>
-    </nav>
+    </header>
 
-    <div class="container">
-        <div class="row">
-            <div id="aboutme">
-                <h2>About Me</h2>
-            </div>
-            <hr>
-            <!-- <aside><img src="assets/images/35921990.jpg" alt="Ali" height="200px" width="200px"></aside> -->
+    <div id="main-container" class="container">
+        <section class="main-container">
+            <h1 id="aboutme_header">About Me</h1>
 
-            <div class="row">
-                <div class="col-md-2">
-                    <img src="assets/images/35921990.jpg" alt="Ali" height="200px" width="180px"></aside>
-                </div>
-                <div class="col-md-9">
-                    <p>
-                        My name is Ali Al Qaraghuli and I would love to help you with your next web based creation. I am
-                        passionate
-                        about designing web applications to solve problems. My toolset includes: HTML5, CSS, Javascript,
-                        React,
-                        Node.JS, and more. If you have a problem that needs solving, need a simple website or even a
-                        community
-                        to
-                        reach all your customers, we can work to get it built and solve your problem. Check out my
-                        github
-                        repo
-                        if
-                        you are interested in looking at code. You can also reach out to me if you are interested in
-                        working
-                        together on something.
-                    </p>
+            <aside><img src="assets/images/35921990.jpg" alt="ali" height="200px" width="200px">
+            </aside>
+            <p id="para1">
+                My name is Ali Al Qaraghuli and I would love to help you with your next web based creation. I am
+                passionate
+                about designing web applications to solve problems. My toolset includes: HTML5, CSS, Javascript, React,
+                Node.JS, and more. If you have a problem that needs solving, need a simple website or even a community
+                to
+                reach all your customers, we can work to get it built and solve your problem. Check out my github repo
+                if
+                you are interested in looking at code. You can also reach out to me if you are interested in working
+                together on something.
+            </p>
+            <p id="para2">
+                Contact me so we can get your problem solved! I gurantee we will make something great. Take a look at my
+                portfolio to see some of my previous work.
+                Again, feel free to <strong><a href="contact.html">contact</a></strong> me if you are interested in
+                working
+                together.
+            </p>
+        </section>
+    </div>
 
-                </div>
-
-
-                <div class="col-md-8">
-
-
-                    <p id="para2">
-                        Contact me so we can get your problem solved! I gurantee we will make something great. Take a
-                        look
-                        at my
-                        portfolio to see some of my previous work.
-                        Again, feel free to <strong><a href="contact.html">contact</a></strong> me if you are interested
-                        in
-                        working
-                        together.
-                    </p>
-                </div>
-            </div>
-
-            <footer>
-                Copyright &copy; 2019 All Right Reserved To ALi ALQARAGHULI &reg;
-            </footer>
-        </div>
-
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
+    <footer>
+        Copyright &copy; 2019 All Right Reserved To ALi ALQARAGHULI &reg;
+    </footer>
 </body>
 
 </html>
