create the portfolio page

--- a/index.html
+++ b/index.html
@@ -1,54 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Peter's Portfolio</title>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <title>ALI ALQARAGHULI</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/styles.css" media="screen">
+
 </head>
 
 <body>
-    <header class="masthead">
-        <div class=container>
-            <a href="index.html" id="peterw">ALI</a>
-            <nav>
-                <a id="about" href="index.html"> About </a>
-                <a id="portfolio" href="portfolio.html"> Portfolio </a>
-                <a id="contact" href="contact.html"> Contact </a>
-            </nav>
-        </div>
-    </header>
-
-    <div id="main-container" class="container">
-        <section class="main-container">
-            <h1 id="aboutme_header">About Me</h1>
-
-            <aside><img src="assets/images/35921990.jpg" alt="ali" height="200px" width="200px">
-            </aside>
-            <p id="para1">
-                My name is Ali Al Qaraghuli and I would love to help you with your next web based creation. I am
-                passionate
-                about designing web applications to solve problems. My toolset includes: HTML5, CSS, Javascript, React,
-                Node.JS, and more. If you have a problem that needs solving, need a simple website or even a community
-                to
-                reach all your customers, we can work to get it built and solve your problem. Check out my github repo
-                if
-                you are interested in looking at code. You can also reach out to me if you are interested in working
-                together on something.
-            </p>
-            <p id="para2">
-                Contact me so we can get your problem solved! I gurantee we will make something great. Take a look at my
-                portfolio to see some of my previous work.
-                Again, feel free to <strong><a href="contact.html">contact</a></strong> me if you are interested in
-                working
-                together.
-            </p>
-        </section>
+  <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="index.html" id="logo">ALI ALQARAGHULI</a>
+      </div>
+      <button type="button" class="navbar-toggler collapsed ml-auto" data-toggle="collapse"
+        data-target="#page-nav-collapse" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="page-nav-collapse">
+        <ul class="nav navbar-nav ml-auto">
+          <li>
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+        </ul>
+      </div>
     </div>
-
-    <footer>
-        Copyright &copy; 2019 All Right Reserved To ALi ALQARAGHULI &reg;
-    </footer>
+  </nav>
+  <main class="container">
+    <section class="row">
+      <div class="col-md-8">
+        <article class="block">
+          <h1 class="block-header">About Me</h1>
+          <hr />
+          <img src="assets/imgs/ali.jpg" alt="" id="about-image" />
+          <p>My name is ALI ALQARAGHULI my goal to be web developer experienced (HTML, CSS, JAVASCRIPT, JQuery, MySQL
+            ETC). i
+            have 4 Years experience with desktop application visual studio.net.</p>
+          <br />
+          <p>Furthermore, I am multi-task oriented, enjoy a challenge, and continually stay abreast of the latest
+            advancements in the web developer.
+          </p>
+        </article>
+      </div>
+      <div class="col-md-4">
+        <aside class="block">
+          <h1 class="block-header connect-header">Connect With Me</h1>
+          <hr />
+          <div id="images">
+            <img src="assets/imgs/github.png" alt="" class="connect-photo">
+            <img src="assets/imgs/linkedin.png" alt="" class="connect-photo">
+            <img src="assets/imgs/stackover2.png" alt="" class="connect-photo">
+          </div>
+        </aside>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="two-toned-footer-color"></div>
+    <p class="text-muted text-muted-footer text-center">
+      &copy; Copyright
+    </p>
+  </footer>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  </script>
 </body>
 
 </html>
