--- a/contact.html
+++ b/contact.html
@@ -1,47 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Contact me!</title>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <title>contact</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/styles.css" media="screen">
+
 </head>
 
 <body>
-    <header class="masthead">
-        <div class=container>
-            <a href="index.html" id="peterw">ALI</a>
-            <nav>
-                <a id="about" href="index.html"> About </a>
-                <a id="portfolio" href="portfolio.html"> Portfolio </a>
-                <a id="contact" href="contact.html"> Contact </a>
-            </nav>
-        </div>
-    </header>
 
-
-    <div id="main-container" class="container">
-        <section class="main-container">
-            <h1 id="contact_header">Contact</h1>
-
-            <section class="contact-form">
-                <form id="contact-form" method="POST" action="">
-                    <span class="form-class">Name</span>
-                    <input class="form-class" type="text" name="name" id="name" placeholder="Name" required><br><br>
-                    <span class="form-class">Email</span>
-                    <input class="form-class" type="email" name="email" id="email" placeholder="Email" required><br><br>
-                    <span class="form-class">Message</span>
-                    <textarea class="form-class" id="message_area" name="Message" rows="8px" cols="40px"
-                        required></textarea><br>
-                    <button class="btn_submit">Submit</button>
-            </section>
-
-        </section>
+  <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="index.html" id="logo">ALi ALQARAGHULI</a>
+      </div>
+      <button type="button" class="navbar-toggler collapsed ml-auto" data-toggle="collapse"
+        data-target="#page-nav-collapse" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="page-nav-collapse">
+        <ul class="nav navbar-nav ml-auto">
+          <li>
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav>
 
-    <footer>
-        Copyright &copy; 2019 All Right Reserved To ALi ALQARAGHULI &reg;
-    </footer>
+  <main class="container">
+    <section class="row">
+      <div class="col-md-8">
+        <form class="block form-horizontal">
+          <h1 class="block-header">Contact</h1>
+          <hr />
+          <div class="form-group">
+            <label for="name" class="col-sm-2 control-label">Name</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="name" placeholder="Name">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="email" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-10">
+              <input type="password" class="form-control" id="email" placeholder="Email">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label" for="msg">Message</label>
+            <div class="col-sm-10">
+              <textarea id="msg" class="form-control" rows="3" placeholder="Message"></textarea>
+            </div>
+          </div>
+          <button class="submit-btn">Submit</button>
+        </form>
+      </div>
+      <div class="col-md-4">
+        <aside class="block">
+          <h1 class="block-header connect-header">Connect With Me</h1>
+          <hr />
+          <div id="images">
+            <img src="assets/imgs/github.png" alt="" class="connect-photo">
+            <img src="assets/imgs/linkedin.png" alt="" class="connect-photo">
+            <img src="assets/imgs/stackover2.png" alt="" class="connect-photo">
+          </div>
+        </aside>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="two-toned-footer-color"></div>
+    <p class="text-muted text-muted-footer text-center">
+      &copy; Copyright
+    </p>
+  </footer>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  </script>
 
 </body>
 
